2014-02-26  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* NEWS:
	* VERSION:
	upped version to 1.010 for release with new contrib JetsWithoutJets 
        and added release date to NEWS.

        * contribs.svn
        added JetsWithoutJets v1.0.0

        * configure
        - added a blank line in output to config.log
        - enabled alphabetically ordered output of enabled contribs

2014-02-03  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS:
	* VERSION:
	upped version to 1.009 for release and added release date to NEWS.

2014-01-31  Gavin SALAM  <salam@lpthe.jussieu.fr> + Gregory + Matteo

	* configure:
	* Makefile.in:
	added targets fragile-shared fragile-shared-install and fragile-shared-distclean;
	the fragile-shared(-install) builds (installs) a
	libfastjetcontribfragile.so file. This is currently very fragile, in 
	that it relies on just the SRCS formatting in the individual
	contrib makefiles (all sources on a single line, without wildcards).

2014-01-20  Gavin Salam  <gavin.salam@cern.ch>

	* Makefile.in:
	* utils/check.sh: 

	arranged for make check to exit with error on failure from within
	subdirectories, but to exit OK on failure when called from the
	main directory (previous behaviour was to always exit OK).

	Removed redundant "exit 1" from the check.sh code (exit always
	handled by print_status_and_exit(...)).

	Also, when called directly from a subdirectory, make check no
	longer records its output in the test_summary.tmp file, and it now
	prints a colour-coded success/failure message.

2013-10-24  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/switch-to-version.sh:
	updated to add support for branches

	* scripts/update-contribs.sh (script_new_version):
	fixed an issue with checking out versions containing a '-' [the
	regular expression matching pattern was consifering these as
	"to-be-skipped"]

2013-10-21  Gavin Salam  <gavin.salam@cern.ch>

	* DEVEL-GUIDELINES:
	added some first thoughts on guidelines for reviewing
