@@ -6,7 +6,10 @@
 # Best run from a directory that is a clean checkout of a tag.
 
 # set to 1 to sort contribs alphabetically, 0 otherwise
-$sort=0;
+$sort=1;
+# set to 1 to include release date taken from svn tags, 0 otherwise.
+# This is experimental, and should probably not be used at this stage.
+$include_date=0;
 
 $versions="contribs.svn";
 $svn="http://fastjet.hepforge.org/svn/contrib/contribs/";
@@ -37,9 +40,23 @@ foreach ( @contribs_array ) {
     $version = $contribs_hash{$_};
     if ($version =~ /^[0-9]/) {$version = "tags/$version";}
     ($textversion = $version) =~ s/tags\///;
+    if($include_date) {
+      # extract date of last tag from svn
+      $date = `svn -v list $svn$contrib/tags | grep $textversion | awk '{print \$3" "\$4", "\$5}'`;
+      # replace hour with current year for dates more recent than 6 months
+      # (will probably have to be fixed when six months back is previous year...)
+      # Even better, one could  use the --xml option and parse appropriately the output:
+      # $date = `svn --xml list $svn$contrib/tags`;
+      # At this stage, XML parsing is not implemented though.
+      $year = `date +%Y`;
+      $date =~ s/[0-9][0-9]:[0-9][0-9]/$year/;
+      #print $contrib." ".$date."\n";
+    }
     $list .= "<tr> <td class=\"contribname\"> 
                    <a href=\"$svn$contrib/$version/\">$contrib</a>
-               </td> <td style=\"{text-align:center;}\"> $textversion </td> <td>";
+               </td> <td style=\"{text-align:center;}\"> $textversion </td>";
+    if ($include_date) {$list .= "<td>$date</td>";}
+    $list .=  "<td>";
     if (-e "$contrib/README") {
       $list .= '<a href="'.$svn.$contrib.'/'.$version.'/README">README</a> ';
     }
@@ -82,7 +99,10 @@ Version '.$topversion.' of FastJet Contrib is distributed with the following pac
 
 <table class="contriblist">
 <tr><th class="contriblist">Package</th> 
-    <th class="contriblist">Version</th>
+    <th class="contriblist">Version</th>';
+if($include_date) {$head .= '
+    <th class="contriblist">Release date</th>';}
+$head .= '
     <th class="contriblist">Information</th> </tr> 
 ';
 
